--- a/k8s-manifests/demo/deployment.yaml
+++ b/k8s-manifests/demo/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: 192.168.1.243/demo/nginx:alpine
+        image: harbor.lmsx.io.vn/demo/nginx:alpine
         ports:
         - containerPort: 80
       imagePullSecrets:
