--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Configure Docker to trust Harbor CA
         run: |
           mkdir -p /etc/docker/certs.d/harbor.lmsx.io.vn
-          echo "${{ secrets.HARBOR_CA }}" > sudo tee /etc/docker/certs.d/harbor.lmsx.io.vn/ca.crt
+          echo "${{ secrets.HARBOR_CA }}" > $HOME/.docker/certs.d/harbor.lmsx.io.vn/ca.crt
 
       - name: Login to Harbor
         uses: docker/login-action@v2
