--- a/harbor-values.yaml
+++ b/harbor-values.yaml
@@ -1,59 +1,44 @@
-USER-SUPPLIED VALUES:
-chartmuseum:
-  enabled: false
-database:
-  internal:
-    password: changeit-db-pwd
-  type: internal
 expose:
-  loadBalancer:
-    IP: 192.168.1.243
-    name: harbor
-    ports:
-      httpPort: 80
-      httpsPort: 443
-    sourceRanges: []
+  type: ingress
   tls:
-    certSource: secret
     enabled: true
+    certSource: secret
     secret:
-      notarySecretName: harbor-ingress-tls
-      secretName: harbor-ingress-tls
-  type: loadBalancer
-externalURL: https://harbor.local
-harborAdminPassword: Harbor12345
-metrics:
-  enabled: false
-notary:
-  enabled: false
+      secretName: harbor-tls
+      notarySecretName: harbor-tls
+  ingress:
+    hosts:
+      core: harbor.lmsx.io.vn
+    className: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+
+externalURL: https://harbor.lmsx.io.vn
+
 persistence:
   enabled: true
   persistentVolumeClaim:
-    database:
-      accessMode: ReadWriteOnce
-      size: 2Gi
-      storageClass: cstor-csi-disk
-    jobservice:
-      jobLog:
-        accessMode: ReadWriteOnce
-        size: 500Mi
-        storageClass: cstor-csi-disk
-    redis:
-      accessMode: ReadWriteOnce
-      size: 500Mi
-      storageClass: cstor-csi-disk
     registry:
-      accessMode: ReadWriteOnce
-      size: 10Gi
-      storageClass: cstor-csi-disk
-    trivy:
-      accessMode: ReadWriteOnce
-      size: 2Gi
-      storageClass: cstor-csi-disk
-  resourcePolicy: keep
-redis:
-  internal:
-    password: changeit-redis-pwd
-  type: internal
+      size: 20Gi
+    database:
+      size: 5Gi
+    redis:
+      size: 1Gi
+
+harborAdminPassword: "Harbor12345"
+
+# Disable Trivy nếu không cần
 trivy:
   enabled: true
+
+# Disable Notary nếu không cần
+notary:
+  enabled: true
+
+# Database internal
+database:
+  type: internal
+
+# Redis internal  
+redis:
+  type: internal
