--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,126 +1,42 @@
-name: CI/CD Pipeline
+name: Simple Harbor Test
 
 on:
-  push:
-    branches: [ main, develop ]
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ main, develop ]
   workflow_dispatch:
 
-permissions:
-  contents: write
-
-env:
-  HARBOR_URL: harbor.lmsx.io.vn
-  HARBOR_PROJECT: demo
-  IMAGE_NAME: nginx
-
 jobs:
-  build-and-push:
+  test:
     runs-on: ubuntu-latest
-    outputs:
-      image-tag: ${{ steps.meta.outputs.version }}
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      # Debug step - Check secrets
-      - name: Debug - Verify secrets exist
+      - name: Test network connectivity
         run: |
-          echo "HARBOR_URL: ${{ env.HARBOR_URL }}"
-          echo "HARBOR_PROJECT: ${{ env.HARBOR_PROJECT }}"
-          echo "HARBOR_USERNAME is set: ${{ secrets.HARBOR_USERNAME != '' }}"
-          echo "HARBOR_PASSWORD is set: ${{ secrets.HARBOR_PASSWORD != '' }}"
-      
-      # Debug step - Check Harbor API access
-      - name: Debug - Test Harbor API
-        run: |
-          echo "Testing Harbor API access..."
-          curl -u "${{ secrets.HARBOR_USERNAME }}:${{ secrets.HARBOR_PASSWORD }}" \
-            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}" || echo "API call failed"
+          echo "Testing DNS resolution..."
+          nslookup harbor.lmsx.io.vn
           
-          echo "Listing repositories..."
-          curl -u "${{ secrets.HARBOR_USERNAME }}:${{ secrets.HARBOR_PASSWORD }}" \
-            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}/repositories" || echo "List repos failed"
+          echo "Testing HTTPS connection..."
+          curl -v https://harbor.lmsx.io.vn/v2/
       
-      # Login to Harbor
-      - name: Login to Harbor
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.HARBOR_URL }}
-          username: ${{ secrets.HARBOR_USERNAME }}
-          password: ${{ secrets.HARBOR_PASSWORD }}
-      
-      # Extract metadata for tags
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,format=short
-            type=raw,value=alpine
-            type=raw,value=latest,enable={{is_default_branch}}
-      
-      # Build image locally first
-      - name: Build Docker image
+      - name: Test authentication
         run: |
-          echo "Building image..."
-          docker build -t ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
+          echo "Testing login..."
+          echo "Harbor12345" | docker login harbor.lmsx.io.vn -u admin --password-stdin
           
-          echo "Tagging image..."
-          docker tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
+          echo "Testing token..."
+          TOKEN=$(curl -s -u "admin:Harbor12345" "https://harbor.lmsx.io.vn/service/token?service=harbor-registry&scope=repository:demo/nginx:pull,push" | jq -r '.token')
+          echo "Token received: ${TOKEN:0:50}..."
           
-          docker tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
-          
-          docker tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-      
-      # Push image with docker CLI
-      - name: Push Docker image
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "Pushing images..."
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-          
-          echo "Successfully pushed all images!"
-      
-      # Verify pushed images
-      - name: Verify images in Harbor
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "Verifying images in Harbor..."
-          curl -u "${{ secrets.HARBOR_USERNAME }}:${{ secrets.HARBOR_PASSWORD }}" \
-            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}/repositories/${{ env.IMAGE_NAME }}/artifacts" | jq '.[].tags[].name'
-      
-      # Update Kubernetes manifest (if exists)
-      - name: Update Kubernetes manifest
-        if: github.event_name != 'pull_request' && hashFiles('k8s-manifests/demo/deployment.yaml') != ''
-        run: |
-          if [ -f "k8s-manifests/demo/deployment.yaml" ]; then
-            sed -i "s|image:.*|image: ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}|" k8s-manifests/demo/deployment.yaml
-            echo "Updated deployment.yaml with new image tag"
-          else
-            echo "deployment.yaml not found, skipping update"
+          if [ -z "$TOKEN" ] || [ "$TOKEN" = "null" ]; then
+            echo "ERROR: Failed to get token!"
+            exit 1
           fi
       
-      # Commit and push changes
-      - name: Commit and push manifest changes
-        if: github.event_name != 'pull_request' && hashFiles('k8s-manifests/demo/deployment.yaml') != ''
+      - name: Manual push test
         run: |
-          git config user.name "Hitepu"
-          git config user.email "hiep18797@gmail.com"
-          git add k8s-manifests/demo/deployment.yaml || true
-          git diff --staged --quiet || git commit -m "Update image to ${{ github.sha }} [skip ci]"
-          git push origin ${{ github.ref_name }} || echo "Nothing to push"
+          echo "Pulling nginx..."
+          docker pull nginx:alpine
+          
+          echo "Tagging..."
+          docker tag nginx:alpine harbor.lmsx.io.vn/demo/nginx:gh-test
+          
+          echo "Pushing with verbose output..."
+          docker push harbor.lmsx.io.vn/demo/nginx:gh-test -v || docker push harbor.lmsx.io.vn/demo/nginx:gh-test
