--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,13 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [ main, develop ]
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ main, develop ]
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 env:
   HARBOR_URL: harbor.lmsx.io.vn
@@ -19,36 +13,38 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    outputs:
-      image-tag: ${{ steps.meta.outputs.version }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      # Install Harbor Certificate
+      - name: Setup Harbor SSL Certificate
+        run: |
+          echo "Setting up Harbor certificate..."
+          
+          # Download certificate
+          curl -k https://${{ env.HARBOR_URL }}/api/v2.0/systeminfo/getcert -o /tmp/harbor-ca.crt
+          
+          # Install for system
+          sudo cp /tmp/harbor-ca.crt /usr/local/share/ca-certificates/harbor-ca.crt
+          sudo update-ca-certificates
+          
+          # Install for Docker
+          sudo mkdir -p /etc/docker/certs.d/${{ env.HARBOR_URL }}
+          sudo cp /tmp/harbor-ca.crt /etc/docker/certs.d/${{ env.HARBOR_URL }}/ca.crt
+          
+          # Verify
+          ls -la /etc/docker/certs.d/${{ env.HARBOR_URL }}/
+          echo "✅ Harbor certificate installed"
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
       
-      # Debug step - Check secrets
-      - name: Debug - Verify secrets exist
-        run: |
-          echo "HARBOR_URL: ${{ env.HARBOR_URL }}"
-          echo "HARBOR_PROJECT: ${{ env.HARBOR_PROJECT }}"
-          echo "HARBOR_USERNAME is set: ${{ secrets.HARBOR_USERNAME != '' }}"
-          echo "HARBOR_PASSWORD is set: ${{ secrets.HARBOR_PASSWORD != '' }}"
-      
-      # Debug step - Check Harbor API access
-      - name: Debug - Test Harbor API
-        run: |
-          echo "Testing Harbor API access..."
-          curl -u "${{ secrets.HARBOR_USERNAME }}:${{ secrets.HARBOR_PASSWORD }}" \
-            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}" || echo "API call failed"
-          
-          echo "Listing repositories..."
-          curl -u "${{ secrets.HARBOR_USERNAME }}:${{ secrets.HARBOR_PASSWORD }}" \
-            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}/repositories" || echo "List repos failed"
-      
-      # Login to Harbor
       - name: Login to Harbor
         uses: docker/login-action@v3
         with:
@@ -56,71 +52,20 @@ jobs:
           username: ${{ secrets.HARBOR_USERNAME }}
           password: ${{ secrets.HARBOR_PASSWORD }}
       
-      # Extract metadata for tags
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,format=short
-            type=raw,value=alpine
-            type=raw,value=latest,enable={{is_default_branch}}
-      
-      # Build image locally first
       - name: Build Docker image
         run: |
-          echo "Building image..."
           docker build -t ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
-          
-          echo "Tagging image..."
           docker tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
-          
-          docker tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
-          
-          docker tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
       
-      # Push image with docker CLI
-      - name: Push Docker image
-        if: github.event_name != 'pull_request'
+      - name: Push to Harbor
         run: |
-          echo "Pushing images..."
           docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-          
-          echo "Successfully pushed all images!"
+          echo "✅ Images pushed successfully"
       
-      # Verify pushed images
       - name: Verify images in Harbor
-        if: github.event_name != 'pull_request'
         run: |
-          echo "Verifying images in Harbor..."
           curl -u "${{ secrets.HARBOR_USERNAME }}:${{ secrets.HARBOR_PASSWORD }}" \
-            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}/repositories/${{ env.IMAGE_NAME }}/artifacts" | jq '.[].tags[].name'
-      
-      # Update Kubernetes manifest (if exists)
-      - name: Update Kubernetes manifest
-        if: github.event_name != 'pull_request' && hashFiles('k8s-manifests/demo/deployment.yaml') != ''
-        run: |
-          if [ -f "k8s-manifests/demo/deployment.yaml" ]; then
-            sed -i "s|image:.*|image: ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}|" k8s-manifests/demo/deployment.yaml
-            echo "Updated deployment.yaml with new image tag"
-          else
-            echo "deployment.yaml not found, skipping update"
-          fi
-      
-      # Commit and push changes
-      - name: Commit and push manifest changes
-        if: github.event_name != 'pull_request' && hashFiles('k8s-manifests/demo/deployment.yaml') != ''
-        run: |
-          git config user.name "Hitepu"
-          git config user.email "hiep18797@gmail.com"
-          git add k8s-manifests/demo/deployment.yaml || true
-          git diff --staged --quiet || git commit -m "Update image to ${{ github.sha }} [skip ci]"
-          git push origin ${{ github.ref_name }} || echo "Nothing to push"
+            "https://${{ env.HARBOR_URL }}/api/v2.0/projects/${{ env.HARBOR_PROJECT }}/repositories/${{ env.IMAGE_NAME }}/artifacts" | \
+            jq -r '.[].tags[].name' | head -5
