--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline (Docker CLI)
+name: CI/CD Pipeline
 
 on:
   push:
@@ -21,34 +21,43 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Login to Harbor
-        run: |
-          echo "${{ secrets.HARBOR_PASSWORD }}" | docker login ${{ env.HARBOR_URL }} \
-            --username ${{ secrets.HARBOR_USERNAME }} \
-            --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
+      # Dùng action login (này work)
+      - name: Login to Harbor
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.HARBOR_URL }}
+          username: ${{ secrets.HARBOR_USERNAME }}
+          password: ${{ secrets.HARBOR_PASSWORD }}
+      
+      # Build và load vào Docker daemon
       - name: Build image
         run: |
-          docker build \
+          docker buildx build \
+            --load \
             --tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest \
             --tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             --tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine \
             .
       
+      # List images để confirm
+      - name: List built images
+        run: |
+          docker images | grep ${{ env.IMAGE_NAME }}
+      
+      # Push từng tag
       - name: Push images
         if: github.event_name != 'pull_request'
         run: |
+          echo "Pushing latest..."
           docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
+          
+          echo "Pushing ${{ github.sha }}..."
           docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          
+          echo "Pushing alpine..."
           docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
           
-          echo "✅ All images pushed successfully!"
-      
-      - name: Image summary
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "### 🐳 Pushed Images" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- \`${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest\`" >> $GITHUB_STEP_SUMMARY
-          echo "- \`${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "- \`${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine\`" >> $GITHUB_STEP_SUMMARY
+          echo "✅ All images pushed!"
