--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,43 +21,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Install skopeo
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y skopeo
       
-      # Dùng action login (này work)
-      - name: Login to Harbor
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.HARBOR_URL }}
-          username: ${{ secrets.HARBOR_USERNAME }}
-          password: ${{ secrets.HARBOR_PASSWORD }}
-      
-      # Build và load vào Docker daemon
       - name: Build image
         run: |
-          docker buildx build \
-            --load \
-            --tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest \
-            --tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            --tag ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine \
-            .
+          docker build -t local-image:latest .
       
-      # List images để confirm
-      - name: List built images
+      - name: Push with skopeo
+        env:
+          HARBOR_USER: ${{ secrets.HARBOR_USERNAME }}
+          HARBOR_PASS: ${{ secrets.HARBOR_PASSWORD }}
         run: |
-          docker images | grep ${{ env.IMAGE_NAME }}
-      
-      # Push từng tag
-      - name: Push images
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "Pushing latest..."
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
+          # Push với skopeo
+          skopeo copy \
+            --dest-creds="${HARBOR_USER}:${HARBOR_PASS}" \
+            docker-daemon:local-image:latest \
+            docker://${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:latest
           
-          echo "Pushing ${{ github.sha }}..."
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          skopeo copy \
+            --dest-creds="${HARBOR_USER}:${HARBOR_PASS}" \
+            docker-daemon:local-image:latest \
+            docker://${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           
-          echo "Pushing alpine..."
-          docker push ${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
-          
-          echo "✅ All images pushed!"
+          skopeo copy \
+            --dest-creds="${HARBOR_USER}:${HARBOR_PASS}" \
+            docker-daemon:local-image:latest \
+            docker://${{ env.HARBOR_URL }}/${{ env.HARBOR_PROJECT }}/${{ env.IMAGE_NAME }}:alpine
